# SATySFi-image

./: README.md  Satyristes  satysfi-image-doc.opam  satysfi-image.opam
doc/: manual-ja.saty
src/: image.satyh
