opam-version: "2.0"
name: "satysfi-image-doc"
version: "0.1.0"
synopsis: "Document of an insert image with SATySFi"
description: """
Document of an insert image with SATySFi.
"""
maintainer: "Naoki Kaneko <puripuri2100@gmail.com>"
authors: "Naoki Kaneko <puripuri2100@gmail.com>"
license: "MIT" # Choose what you want
homepage: "https://github.com/puripuri2100/SATySFi-image"
dev-repo: "git+https://github.com/puripuri2100/SATySFi-image.git"
bug-reports: "https://github.com/puripuri2100/SATySFi-image/issues"
depends: [
  "satysfi" { >= "0.0.6" & < "0.0.7" }
  "satyrographos" { >= "0.0.2.6" & < "0.0.3" }

  # You may want to include the corresponding library
  "satysfi-image" {= "%{version}%"}

  # Other libraries
  "satysfi-dist"
]
build: [
  ["satyrographos" "opam" "build"
   "--name" "image-doc"
   "--prefix" "%{prefix}%"
   "--script" "%{build}%/Satyristes"]
]
install: [
  ["satyrographos" "opam" "install"
   "--name" "image-doc"
   "--prefix" "%{prefix}%"
   "--script" "%{build}%/Satyristes"]
]
